# dl-4-tsc

./: .gitignore  README.md  environment.yml  main.py  setup.cfg  setup.py
classifiers/: resnet.py
dl4tsc/classifiers/: cnn.py  mcdcnn.py  mcnn.py  mlp.py  resnet.py  tlenet.py  twiesn.py
dl4tsc/utils/: predict.py  train.py  utils.py
src/DL4TSC/utils/: predict.py  train.py
utils/: predict.py
