[metadata]
# replace with your username:
name = DL4TSC-dezeraecox
version = 0.0.1
author = dezeraecox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dezeraecox-utilities/dl-4-tsc
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src